--- a/files/home/styles.css
+++ b/files/home/styles.css
@@ -939,6 +939,13 @@
   width:136px;
   word-wrap:break-word;
 }
+#u50_ann {
+  position:absolute;
+  left:143px;
+  top:50px;
+  width:1px;
+  height:1px;
+}
 #u52_div {
   position:absolute;
   left:0px;
@@ -1812,6 +1819,13 @@
   width:136px;
   word-wrap:break-word;
 }
+#u121_ann {
+  position:absolute;
+  left:204px;
+  top:85px;
+  width:1px;
+  height:1px;
+}
 #u123_div {
   position:absolute;
   left:0px;
@@ -2111,6 +2125,13 @@
   width:136px;
   word-wrap:break-word;
 }
+#u137_ann {
+  position:absolute;
+  left:143px;
+  top:50px;
+  width:1px;
+  height:1px;
+}
 #u139_div {
   position:absolute;
   left:0px;
@@ -2232,28 +2253,28 @@
   position:absolute;
   left:10px;
   top:89px;
-  width:1143px;
+  width:1145px;
   height:95px;
 }
 #u146_img {
   position:absolute;
   left:0px;
   top:0px;
-  width:30px;
+  width:27px;
   height:30px;
 }
 #u146 {
   position:absolute;
   left:0px;
   top:0px;
-  width:30px;
+  width:27px;
   height:30px;
 }
 #u147 {
   position:absolute;
   left:2px;
   top:7px;
-  width:26px;
+  width:23px;
   visibility:hidden;
   word-wrap:break-word;
 }
@@ -2261,42 +2282,42 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:170px;
+  width:185px;
   height:30px;
 }
 #u148 {
   position:absolute;
-  left:30px;
+  left:27px;
   top:0px;
-  width:170px;
+  width:185px;
   height:30px;
 }
 #u149 {
   position:absolute;
   left:2px;
   top:7px;
-  width:166px;
+  width:181px;
   word-wrap:break-word;
 }
 #u150_img {
   position:absolute;
   left:0px;
   top:0px;
-  width:70px;
+  width:60px;
   height:30px;
 }
 #u150 {
   position:absolute;
-  left:200px;
+  left:212px;
   top:0px;
-  width:70px;
+  width:60px;
   height:30px;
 }
 #u151 {
   position:absolute;
   left:2px;
   top:7px;
-  width:66px;
+  width:56px;
   word-wrap:break-word;
 }
 #u152_img {
@@ -2308,7 +2329,7 @@
 }
 #u152 {
   position:absolute;
-  left:270px;
+  left:272px;
   top:0px;
   width:150px;
   height:30px;
@@ -2329,7 +2350,7 @@
 }
 #u154 {
   position:absolute;
-  left:420px;
+  left:422px;
   top:0px;
   width:60px;
   height:30px;
@@ -2350,7 +2371,7 @@
 }
 #u156 {
   position:absolute;
-  left:480px;
+  left:482px;
   top:0px;
   width:80px;
   height:30px;
@@ -2371,7 +2392,7 @@
 }
 #u158 {
   position:absolute;
-  left:560px;
+  left:562px;
   top:0px;
   width:60px;
   height:30px;
@@ -2392,7 +2413,7 @@
 }
 #u160 {
   position:absolute;
-  left:620px;
+  left:622px;
   top:0px;
   width:100px;
   height:30px;
@@ -2413,7 +2434,7 @@
 }
 #u162 {
   position:absolute;
-  left:720px;
+  left:722px;
   top:0px;
   width:128px;
   height:30px;
@@ -2434,7 +2455,7 @@
 }
 #u164 {
   position:absolute;
-  left:848px;
+  left:850px;
   top:0px;
   width:70px;
   height:30px;
@@ -2455,7 +2476,7 @@
 }
 #u166 {
   position:absolute;
-  left:918px;
+  left:920px;
   top:0px;
   width:70px;
   height:30px;
@@ -2476,7 +2497,7 @@
 }
 #u168 {
   position:absolute;
-  left:988px;
+  left:990px;
   top:0px;
   width:150px;
   height:30px;
@@ -2492,35 +2513,35 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:30px;
+  width:27px;
   height:30px;
 }
 #u170 {
   position:absolute;
   left:0px;
   top:30px;
-  width:30px;
+  width:27px;
   height:30px;
 }
 #u171 {
   position:absolute;
   left:2px;
   top:7px;
-  width:26px;
+  width:23px;
   word-wrap:break-word;
 }
 #u172_img {
   position:absolute;
   left:0px;
   top:0px;
-  width:170px;
+  width:185px;
   height:30px;
 }
 #u172 {
   position:absolute;
-  left:30px;
+  left:27px;
   top:30px;
-  width:170px;
+  width:185px;
   height:30px;
   text-align:left;
 }
@@ -2528,28 +2549,28 @@
   position:absolute;
   left:2px;
   top:7px;
-  width:166px;
+  width:181px;
   word-wrap:break-word;
 }
 #u174_img {
   position:absolute;
   left:0px;
   top:0px;
-  width:70px;
+  width:60px;
   height:30px;
 }
 #u174 {
   position:absolute;
-  left:200px;
+  left:212px;
   top:30px;
-  width:70px;
+  width:60px;
   height:30px;
 }
 #u175 {
   position:absolute;
   left:2px;
   top:7px;
-  width:66px;
+  width:56px;
   word-wrap:break-word;
 }
 #u176_img {
@@ -2561,7 +2582,7 @@
 }
 #u176 {
   position:absolute;
-  left:270px;
+  left:272px;
   top:30px;
   width:150px;
   height:30px;
@@ -2582,7 +2603,7 @@
 }
 #u178 {
   position:absolute;
-  left:420px;
+  left:422px;
   top:30px;
   width:60px;
   height:30px;
@@ -2603,7 +2624,7 @@
 }
 #u180 {
   position:absolute;
-  left:480px;
+  left:482px;
   top:30px;
   width:80px;
   height:30px;
@@ -2624,7 +2645,7 @@
 }
 #u182 {
   position:absolute;
-  left:560px;
+  left:562px;
   top:30px;
   width:60px;
   height:30px;
@@ -2645,7 +2666,7 @@
 }
 #u184 {
   position:absolute;
-  left:620px;
+  left:622px;
   top:30px;
   width:100px;
   height:30px;
@@ -2666,7 +2687,7 @@
 }
 #u186 {
   position:absolute;
-  left:720px;
+  left:722px;
   top:30px;
   width:128px;
   height:30px;
@@ -2687,7 +2708,7 @@
 }
 #u188 {
   position:absolute;
-  left:848px;
+  left:850px;
   top:30px;
   width:70px;
   height:30px;
@@ -2708,7 +2729,7 @@
 }
 #u190 {
   position:absolute;
-  left:918px;
+  left:920px;
   top:30px;
   width:70px;
   height:30px;
@@ -2729,7 +2750,7 @@
 }
 #u192 {
   position:absolute;
-  left:988px;
+  left:990px;
   top:30px;
   width:150px;
   height:30px;
@@ -2745,35 +2766,35 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:30px;
+  width:27px;
   height:30px;
 }
 #u194 {
   position:absolute;
   left:0px;
   top:60px;
-  width:30px;
+  width:27px;
   height:30px;
 }
 #u195 {
   position:absolute;
   left:2px;
   top:7px;
-  width:26px;
+  width:23px;
   word-wrap:break-word;
 }
 #u196_img {
   position:absolute;
   left:0px;
   top:0px;
-  width:170px;
+  width:185px;
   height:30px;
 }
 #u196 {
   position:absolute;
-  left:30px;
+  left:27px;
   top:60px;
-  width:170px;
+  width:185px;
   height:30px;
   text-align:left;
 }
@@ -2781,28 +2802,28 @@
   position:absolute;
   left:2px;
   top:7px;
-  width:166px;
+  width:181px;
   word-wrap:break-word;
 }
 #u198_img {
   position:absolute;
   left:0px;
   top:0px;
-  width:70px;
+  width:60px;
   height:30px;
 }
 #u198 {
   position:absolute;
-  left:200px;
+  left:212px;
   top:60px;
-  width:70px;
+  width:60px;
   height:30px;
 }
 #u199 {
   position:absolute;
   left:2px;
   top:7px;
-  width:66px;
+  width:56px;
   word-wrap:break-word;
 }
 #u200_img {
@@ -2814,7 +2835,7 @@
 }
 #u200 {
   position:absolute;
-  left:270px;
+  left:272px;
   top:60px;
   width:150px;
   height:30px;
@@ -2835,7 +2856,7 @@
 }
 #u202 {
   position:absolute;
-  left:420px;
+  left:422px;
   top:60px;
   width:60px;
   height:30px;
@@ -2856,7 +2877,7 @@
 }
 #u204 {
   position:absolute;
-  left:480px;
+  left:482px;
   top:60px;
   width:80px;
   height:30px;
@@ -2877,7 +2898,7 @@
 }
 #u206 {
   position:absolute;
-  left:560px;
+  left:562px;
   top:60px;
   width:60px;
   height:30px;
@@ -2898,7 +2919,7 @@
 }
 #u208 {
   position:absolute;
-  left:620px;
+  left:622px;
   top:60px;
   width:100px;
   height:30px;
@@ -2919,7 +2940,7 @@
 }
 #u210 {
   position:absolute;
-  left:720px;
+  left:722px;
   top:60px;
   width:128px;
   height:30px;
@@ -2940,7 +2961,7 @@
 }
 #u212 {
   position:absolute;
-  left:848px;
+  left:850px;
   top:60px;
   width:70px;
   height:30px;
@@ -2961,7 +2982,7 @@
 }
 #u214 {
   position:absolute;
-  left:918px;
+  left:920px;
   top:60px;
   width:70px;
   height:30px;
@@ -2982,7 +3003,7 @@
 }
 #u216 {
   position:absolute;
-  left:988px;
+  left:990px;
   top:60px;
   width:150px;
   height:30px;
@@ -3121,6 +3142,13 @@
   width:136px;
   word-wrap:break-word;
 }
+#u223_ann {
+  position:absolute;
+  left:205px;
+  top:99px;
+  width:1px;
+  height:1px;
+}
 #u225_div {
   position:absolute;
   left:0px;
@@ -3157,14 +3185,14 @@
   position:absolute;
   left:902px;
   top:7px;
-  width:120px;
+  width:80px;
   height:25px;
 }
 #u227_input {
   position:absolute;
   left:0px;
   top:0px;
-  width:120px;
+  width:80px;
   height:25px;
   font-family:'Arial Normal', 'Arial';
   font-weight:400;
@@ -3178,8 +3206,65 @@
 }
 #u227_ann {
   position:absolute;
-  left:1015px;
+  left:975px;
   top:3px;
   width:1px;
   height:1px;
+}
+#u228_div {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:53px;
+  height:16px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-family:'Arial Normal', 'Arial';
+  font-weight:400;
+  font-style:normal;
+  font-size:13px;
+}
+#u228 {
+  position:absolute;
+  left:992px;
+  top:12px;
+  width:53px;
+  height:16px;
+  font-family:'Arial Normal', 'Arial';
+  font-weight:400;
+  font-style:normal;
+  font-size:13px;
+}
+#u229 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:53px;
+  white-space:nowrap;
+}
+#u230 {
+  position:absolute;
+  left:1055px;
+  top:7px;
+  width:100px;
+  height:25px;
+}
+#u230_input {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:100px;
+  height:25px;
+  font-family:'Arial Normal', 'Arial';
+  font-weight:400;
+  font-style:normal;
+  font-size:13px;
+  text-decoration:none;
+  color:#000000;
+  text-align:left;
 }
